--- a/springboot-backend/Dockerfile
+++ b/springboot-backend/Dockerfile
@@ -24,5 +24,18 @@ WORKDIR /app
 # Copy the JAR file from the build stage to the container
 COPY --from=build /app/target/*.jar app.jar
 
+# Set up MySQL
+RUN apt-get update && apt-get install -y mysql-server && apt-get clean
+RUN service mysql start && mysql -u root -e "CREATE DATABASE employee_management_system"
+
+# Expose MySQL port
+EXPOSE 3306
+
+# Set environment variables
+ENV MYSQL_DATABASE=employee_management_system
+ENV MYSQL_USER=root
+ENV MYSQL_PASSWORD=root
+ENV MYSQL_ROOT_PASSWORD=root
+
 # Specify the command to run your application
 CMD ["java", "-jar", "app.jar"]
