--- a/angular-frontend/src/etc/nginx/conf.d/default.conf
+++ b/angular-frontend/src/etc/nginx/conf.d/default.conf
@@ -10,7 +10,7 @@ server {
 
     location /api/employees {
 
-        proxy_pass http://10.0.49.242:8080/api/employees;
+        proxy_pass http://10.0.49.242:8080/api/v1/employees;
 
     }
 
