--- a/deployment.yaml
+++ b/deployment.yaml
@@ -38,6 +38,20 @@ spec:
           ports:
             - containerPort: 8080
 ---
+# Define a 'Persistent Voulume Claim'(PVC) for Mysql Storage, dynamically provisioned by cluster
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim # name of PVC essential for identifying the storage data 
+  labels:
+    app: Employeedb
+spec:
+  accessModes:
+    - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -62,6 +76,13 @@ spec:
               value: root
             - name: MYSQL_DATABASE
               value: employee_management_system
+          volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
+          - name: mysql-persistent-storage
+            mountPath: /var/lib/mysql #This is the path in the container on which the mounting will take place.
+      volumes:
+      - name: mysql-persistent-storage # Obtaining 'vloume' from PVC
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
 ---
 apiVersion: v1
 kind: Service
