--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto = update
+
+logging.file=application.log
+logging.path=/path/to/logs/
