--- a/deployment.yaml
+++ b/deployment.yaml
@@ -104,11 +104,10 @@ spec:
   selector:
     app: Employeeback
   ports:
-  - nodePort: 30136
-    protocol: TCP
+  - protocol: TCP
     port: 8080
     targetPort: 8080
-  type: NodePort
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
