--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.0.14.55:3306/employee_management_system?createDatabaseIfNotExist=true&useUnicode=true
+spring.datasource.url=jdbc:mysql://sql-service:3306/employee_management_system?createDatabaseIfNotExist=true&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=root
 
