--- a/angular-frontend/src/etc/nginx/conf.d/default.conf
+++ b/angular-frontend/src/etc/nginx/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name http://20.85.249.23;
+    server_name http://localhost;
 
     root /usr/share/nginx/html;
 
@@ -10,7 +10,7 @@ server {
 
     location /api/employees {
 
-        proxy_pass http://10.0.49.242:8080/api/v1/employees;
+        proxy_pass http://localhost:8080/api/v1/employees;
 
     }
     location / {
