--- a/deployment.yaml
+++ b/deployment.yaml
@@ -60,7 +60,7 @@ spec:
     spec:
       containers:
         - name: employeeangular
-          image: wetmonkey/angular-empp-ak:latest
+          image: wetmonkey/empp-front-ak:latest
           ports:
             - containerPort: 80
 ---
@@ -80,7 +80,7 @@ spec:
     spec:
       containers:
         - name: employeespring
-          image: wetmonkey/spring-empp-ak:latest
+          image: wetmonkey/empp-back-ak:latest
           ports:
             - containerPort: 8080
 ---
