--- a/angular-frontend/src/nginx/etc/conf.d/default.conf
+++ b/angular-frontend/src/nginx/etc/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name localhost;
+    server_name http://192.168.146.135/;
 
     root /usr/share/nginx/html;
 
@@ -10,7 +10,7 @@ server {
 
     location /api/v1/employees {
 
-        proxy_pass http://localhost:8080/api/v1/employees;
+        proxy_pass http://192.168.146.135:8080/api/v1/employees;
 
     }
 
