--- a/angular-frontend/src/nginx/etc/conf.d/default.conf
+++ b/angular-frontend/src/nginx/etc/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name http://192.168.146.135/;
+    server_name emppangular;
 
     root /usr/share/nginx/html;
 
