--- a/angular-frontend/src/nginx/etc/conf.d/default.conf
+++ b/angular-frontend/src/nginx/etc/conf.d/default.conf
@@ -10,7 +10,7 @@ server {
 
     location /api/v1/employees {
 
-        proxy_pass http://angular-service:8080/api/v1/employees;
+        proxy_pass http://10.0.144.169:8080/api/v1/employees;
 
     }
 
