--- a/deployment.yaml
+++ b/deployment.yaml
@@ -114,7 +114,7 @@ spec:
   - protocol: TCP
     port: 8080
     targetPort: 8080
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: Service
