--- a/deployment.yaml
+++ b/deployment.yaml
@@ -63,7 +63,7 @@ spec:
     spec:
       containers:
         - name: employeeangular
-          image: wetmonkey/emppfront-aks:32
+          image: wetmonkey/emppfront-aks:33
           ports:
             - containerPort: 80
 ---
@@ -84,7 +84,7 @@ spec:
     spec:
       containers:
         - name: employeespring
-          image: wetmonkey/emppback-aks:32
+          image: wetmonkey/emppback-aks:33
           ports:
             - containerPort: 8080
 ---
@@ -115,6 +115,24 @@ spec:
     port: 8080
     targetPort: 8080
   type: LoadBalancer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: backend-ingress
+  namespace: empp-application
+spec:
+  rules:
+  - host: springservice.com
+    http:
+      paths:
+      - path: /api/v1/employees
+        pathType: Prefix
+        backend:
+          service:
+            name: spring-service
+            port:
+              number: 8080
 ---
 apiVersion: v1
 kind: Service
