--- a/deployment.yaml
+++ b/deployment.yaml
@@ -63,7 +63,7 @@ spec:
     spec:
       containers:
         - name: employeeangular
-          image: wetmonkey/emppfront-aks:33
+          image: wetmonkey/emppfront-aks:34
           ports:
             - containerPort: 80
 ---
@@ -84,7 +84,7 @@ spec:
     spec:
       containers:
         - name: employeespring
-          image: wetmonkey/emppback-aks:33
+          image: wetmonkey/emppback-aks:34
           ports:
             - containerPort: 8080
 ---
@@ -123,16 +123,15 @@ metadata:
   namespace: empp-application
 spec:
   rules:
-  - host: springservice.com
-    http:
-      paths:
-      - path: /api/v1/employees
-        pathType: Prefix
-        backend:
-          service:
-            name: spring-service
-            port:
-              number: 8080
+    - http:
+        paths:
+          - path: /api/v1/employees
+            pathType: Prefix
+            backend:
+              service:
+                name: spring-service
+                port:
+                  number: 8080
 ---
 apiVersion: v1
 kind: Service
