--- a/deployment.yaml
+++ b/deployment.yaml
@@ -63,7 +63,7 @@ spec:
     spec:
       containers:
         - name: employeeangular
-          image: wetmonkey/emppfront-aks:39
+          image: wetmonkey/emppfront-aks:40
           ports:
             - containerPort: 80
 ---
@@ -84,7 +84,7 @@ spec:
     spec:
       containers:
         - name: employeespring
-          image: wetmonkey/emppback-aks:39
+          image: wetmonkey/emppback-aks:40
           ports:
             - containerPort: 8080
 ---
@@ -100,7 +100,6 @@ spec:
   - port: 80
     targetPort: 80
     protocol: TCP
-  type: LoadBalancer
 ---
 apiVersion: v1
 kind: Service
@@ -114,7 +113,6 @@ spec:
   - protocol: TCP
     port: 8080
     targetPort: 8080
-  type: LoadBalancer
 ---
 apiVersion: v1
 kind: Service
@@ -128,4 +126,28 @@ spec:
   - protocol: TCP
     port: 3306
     targetPort: 3306
-  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: my-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /api/v1/employees
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 8080
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 80
