--- a/angular-frontend/src/nginx/etc/conf.d/default.conf
+++ b/angular-frontend/src/nginx/etc/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name employeeangular;
+    server_name angular-service;
 
     root /usr/share/nginx/html;
 
