--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim # name of PVC essential for identifying the storage data 
-  namespace: empp-application
+  namespace: ingress-controller
   labels:
     app: Employeedb
 spec:
