--- a/deployment.yaml
+++ b/deployment.yaml
@@ -131,6 +131,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: my-ingress
+  namespace: ingress-controller
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
