--- a/deployment.yaml
+++ b/deployment.yaml
@@ -136,7 +136,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - http:
+    - host:
+      http:
         paths:
           - path: /api/v1/employees
             pathType: Prefix
