--- a/deployment.yaml
+++ b/deployment.yaml
@@ -136,7 +136,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host:
+    - host: "*"
       http:
         paths:
           - path: /api/v1/employees
