--- a/deployment.yaml
+++ b/deployment.yaml
@@ -136,8 +136,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: "40.88.251.236"
-      http:
+    - http:
         paths:
           - path: /api/v1/employees
             pathType: Prefix
