--- a/deployment.yaml
+++ b/deployment.yaml
@@ -127,12 +127,12 @@ spec:
     port: 3306
     targetPort: 3306
 ---
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: my-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+   kubernetes.io/ingress.class: ingress-nginx
 spec:
   rules:
     - http:
