--- a/deployment.yaml
+++ b/deployment.yaml
@@ -128,6 +128,13 @@ spec:
     targetPort: 3306
 ---
 apiVersion: networking.k8s.io/v1
+kind: IngressClass
+metadata:
+  name: ingressc
+spec:
+  controller: addon-http-application-routing-nginx-ingress-controller
+---
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -138,6 +145,7 @@ metadata:
   name: my-ingress
   namespace: empp-application
 spec:
+  ingressClassName: ingressc
   rules:
     - http:
         paths:
