--- a/deployment.yaml
+++ b/deployment.yaml
@@ -132,7 +132,7 @@ kind: IngressClass
 metadata:
   name: ingressc
 spec:
-  controller: nginx-ingress-controller
+  controller: k8s.io/ingress-nginx
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
