--- a/deployment.yaml
+++ b/deployment.yaml
@@ -150,13 +150,13 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: backend-service
+                name: spring-service
                 port:
                   number: 8080
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: frontend-service
+                name: angular-service
                 port:
                   number: 80
